--- a/templates/main.html
+++ b/templates/main.html
@@ -3,40 +3,60 @@
   <head>
     	<meta charset="utf-8">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>My Web App</title>
+		<link rel = "stylesheet" type = "text/css" href = "{{ url_for('static', filename = 'styles/main_css.css')}}">
+		<link href="{{url_for('static', filename = 'styles/navbar-top-fixed.css', v=0.01)}}" type = "text/css" rel="stylesheet">
+    <title>Twitter Classifier</title>
   </head>
-  <body>
-  	<h1> Hello World </h1>
-	<form action="{{ url_for('main') }}" method="POST">
-	    <fieldset>
-	        <legend>Input Text:</legend>
-	        Type your text in here:
-	        <input name="user_input_text" type="text" required>
-	        <input type="submit" value="Submit">
-	    </fieldset>
-	</form>
-	<div class="alert alert-success">
-		{% if input_text %}
-			<h4> Classification for: {{ input_text }} </h4>
-	    {% endif %}
+  <body class = "bg-info">
 
-		{% if result %}
-			<p> Model predicted: {{ result }} </p>
-	    {% endif %}
+  	 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <a class="navbar-brand" href="{{url_for('main')}}">Main App</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{{url_for('bootstrap')}}">Visualizations <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{url_for('about_us')}}">About Us</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-	    {% if precent_democrat %}
-	    	<p> Percent democrat: {{ precent_democrat }} </p>
-	    {% endif %}
+	  <div class = "center-screen">
+	  	<h1> Try Me! </h1>
+		<form action="{{ url_for('main') }}" method="POST">
+		    <fieldset>
+		        <legend>Input Text</legend>
+		        Type your comment in here:
+		        <input name="user_input_text" type="text" autocomplete = "off" required>
+		        <input type="submit" value="Submit">
+		    </fieldset>
+		</form>
+		<br>
+	
+		<div class="alert alert-success">
+			{% if input_text %}
+				<h4> Classification for: {{ input_text }} </h4>
+		    {% endif %}
 
-	    {% if precent_republican %}
-	    	<p> Percent republican: {{ precent_republican }} </p>
-	    {% endif %}
-	</div>
-     <p>
-		<a href="{{ url_for('classify_image') }} " class="btn btn-secondary my-4">Classify Image Page</a>
-		<a href="{{ url_for('images') }} " class="btn btn-secondary my-4">More Images Page</a>
-		<a href="{{ url_for('bootstrap') }} " class="btn btn-secondary my-4">Pretty Boostrap Page</a>
+			{% if result %}
+				<p> Model predicted: {{ result }} </p>
+		    {% endif %}
 
-     </p>
+		    {% if bad_percent %}
+		    	<p> Bad Post Percentage: {{ bad_percent }}% </p>		    	
+		    {% endif %}
+
+		    {% if good_percent %}
+		    	<p> Good Post Percentage: {{ good_percent }}% </p>
+		    {% endif %}
+		</div>
+		   
+
+	 </div>
   </body>
 </html>
